_generated-doc/3.6/config/quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config.adoc

:summaryTableId: quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_configuration]]link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.active]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.active[quarkus.hibernate-search-orm.active]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.active[quarkus.hibernate-search-orm."persistence-unit-name".active]`


[.description]
--
Whether Hibernate Search should be active for this persistence unit at runtime.

If Hibernate Search is not active, it won't index Hibernate ORM entities,
and accessing the SearchMapping/SearchSession of the relevant persistence unit
for search or other operation will not be possible.

Note that if Hibernate Search is disabled (i.e. `quarkus.hibernate-search-orm.enabled` is set to `false`),
it won't be active for any persistence unit, and setting this property to `true` will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`'true' if Hibernate Search is enabled; 'false' otherwise`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.schema-management.strategy]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.schema-management.strategy[quarkus.hibernate-search-orm.schema-management.strategy]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.schema-management.strategy[quarkus.hibernate-search-orm."persistence-unit-name".schema-management.strategy]`


[.description]
--
The schema management strategy, controlling how indexes and their schema
are created, updated, validated or dropped on startup and shutdown.

Available values:

[cols=2]
!===
h!Strategy
h!Definition

!none
!Do nothing: assume that indexes already exist and that their schema matches Hibernate Search's expectations.

!validate
!Validate that indexes exist and that their schema matches Hibernate Search's expectations.

If it does not, throw an exception, but make no attempt to fix the problem.

!create
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, do nothing: assume that their schema matches Hibernate Search's expectations.

!create-or-validate (**default** unless using Dev Services)
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, validate that their schema matches Hibernate Search's expectations.

If it does not, throw an exception, but make no attempt to fix the problem.

!create-or-update
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, validate that their schema matches Hibernate Search's expectations;
if it does not match expectations, try to update it.

**This strategy is unfit for production environments**,
due to several important limitations,
but can be useful when developing.

!drop-and-create
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, drop them, then create them along with their schema.

!drop-and-create-and-drop (**default** when using Dev Services)
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, drop them, then create them along with their schema.

Also, drop indexes and their schema on shutdown.
!===

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#mapper-orm-schema-management-strategy[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_SCHEMA_MANAGEMENT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_SCHEMA_MANAGEMENT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|SchemaManagementStrategyName 
|`drop-and-create-and-drop when using Dev Services; create-or-validate otherwise`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.query.loading.cache-lookup.strategy]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.query.loading.cache-lookup.strategy[quarkus.hibernate-search-orm.query.loading.cache-lookup.strategy]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.query.loading.cache-lookup.strategy[quarkus.hibernate-search-orm."persistence-unit-name".query.loading.cache-lookup.strategy]`


[.description]
--
The strategy to use when loading entities during the execution of a search query.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_CACHE_LOOKUP_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_CACHE_LOOKUP_STRATEGY+++`
endif::add-copy-button-to-env-var[]
-- a|
`skip`, `persistence-context`, `persistence-context-then-second-level-cache` 
|`skip`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.query.loading.fetch-size]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.query.loading.fetch-size[quarkus.hibernate-search-orm.query.loading.fetch-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.query.loading.fetch-size[quarkus.hibernate-search-orm."persistence-unit-name".query.loading.fetch-size]`


[.description]
--
The fetch size to use when loading entities during the execution of a search query.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_FETCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_FETCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.indexing.plan.synchronization.strategy]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.indexing.plan.synchronization.strategy[quarkus.hibernate-search-orm.indexing.plan.synchronization.strategy]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.indexing.plan.synchronization.strategy[quarkus.hibernate-search-orm."persistence-unit-name".indexing.plan.synchronization.strategy]`


[.description]
--
How to synchronize between application threads and indexing,
in particular when relying on (implicit) listener-triggered indexing on entity change,
but also when using a `SearchIndexingPlan` explicitly.

Defines how complete indexing should be before resuming the application thread
after a database transaction is committed.

[WARNING]
====
Indexing synchronization is only relevant when coordination is disabled (which is the default).

With the xref:hibernate-search-orm-elasticsearch.adoc#coordination[`outbox-polling` coordination strategy],
indexing happens in background threads and is always asynchronous;
the behavior is equivalent to the `write-sync` synchronization strategy.
====

Available values:

[cols=5]
!===
.2+h!Strategy
.2+h!Throughput
3+^h!Guarantees when the application thread resumes

h!Changes applied
h!Changes safe from crash/power loss
h!Changes visible on search

!async
!Best
^!icon:times[role=red]
^!icon:times[role=red]
^!icon:times[role=red]

!write-sync (**default**)
!Medium
^!icon:check[role=lime]
^!icon:check[role=lime]
^!icon:times[role=red]

!read-sync
!Medium to worst
^!icon:check[role=lime]
^!icon:times[role=red]
^!icon:check[role=lime]

!sync
!Worst
^!icon:check[role=lime]
^!icon:check[role=lime]
^!icon:check[role=lime]
!===

This property also accepts a xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean reference]
to a custom implementations of `IndexingPlanSynchronizationStrategy`.

See
link:{hibernate-search-docs-url}#indexing-plan-synchronization[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `IndexingPlanSynchronizationStrategy` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_INDEXING_PLAN_SYNCHRONIZATION_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_INDEXING_PLAN_SYNCHRONIZATION_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`write-sync`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.multi-tenancy.tenant-ids]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.multi-tenancy.tenant-ids[quarkus.hibernate-search-orm.multi-tenancy.tenant-ids]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.multi-tenancy.tenant-ids[quarkus.hibernate-search-orm."persistence-unit-name".multi-tenancy.tenant-ids]`


[.description]
--
An exhaustive list of all tenant identifiers that may be used by the application when multi-tenancy is enabled.

Mainly useful when using the {@code outbox-polling} coordination strategy,
since it involves setting up one background processor per tenant.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_MULTI_TENANCY_TENANT_IDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_MULTI_TENANCY_TENANT_IDS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


h|[[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.backends-configuration-for-backends]]link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.backends-configuration-for-backends[Configuration for backends]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version[quarkus.hibernate-search-orm.elasticsearch.version]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version[quarkus.hibernate-search-orm.elasticsearch."backend-name".version]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".version]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version]`


[.description]
--
The version of Elasticsearch used in the cluster.

As the schema is generated without a connection to the server, this item is mandatory.

It doesn't have to be the exact version (it can be `7` or `7.1` for instance) but it has to be sufficiently precise
to choose a model dialect (the one used to generate the schema) compatible with the protocol dialect (the one used
to communicate with Elasticsearch).

There's no rule of thumb here as it depends on the schema incompatibilities introduced by Elasticsearch versions. In
any case, if there is a problem, you will have an error when Hibernate Search tries to connect to the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++`
endif::add-copy-button-to-env-var[]
--|ElasticsearchVersion 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.layout.strategy]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.layout.strategy[quarkus.hibernate-search-orm.elasticsearch.layout.strategy]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.layout.strategy[quarkus.hibernate-search-orm.elasticsearch."backend-name".layout.strategy]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.layout.strategy[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".layout.strategy]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.layout.strategy[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.layout.strategy]`


[.description]
--
A xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean reference] to the component
used to configure layout (e.g. index names, index aliases).

The referenced bean must implement `IndexLayoutStrategy`.

Available built-in implementations:

`simple`::
The default, future-proof strategy: if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex-000001`, an alias for write operations named `myindex-write`,
and an alias for read operations named `myindex-read`.
`no-alias`::
A strategy without index aliases, mostly useful on legacy clusters:
if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex`, and will not use any alias.

See
link:{hibernate-search-docs-url}#backend-elasticsearch-indexlayout[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `IndexLayoutStrategy` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file[quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.settings-file]`


[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file[quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.mapping-file]`


[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.analysis.configurer]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.analysis.configurer[quarkus.hibernate-search-orm.elasticsearch.analysis.configurer]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.analysis.configurer[quarkus.hibernate-search-orm.elasticsearch."backend-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.analysis.configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.analysis.configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.analysis.configurer]`


[.description]
--
One or more xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean references]
to the component(s) used to configure full text analysis (e.g. analyzers, normalizers).

The referenced beans must implement `ElasticsearchAnalysisConfigurer`.

See xref:hibernate-search-orm-elasticsearch.adoc#analysis-configurer[Setting up the analyzers] for more
information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementations with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts[quarkus.hibernate-search-orm.elasticsearch.hosts]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts[quarkus.hibernate-search-orm.elasticsearch."backend-name".hosts]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".hosts]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.hosts[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.hosts]`


[.description]
--
The list of hosts of the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`localhost:9200`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol[quarkus.hibernate-search-orm.elasticsearch.protocol]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol[quarkus.hibernate-search-orm.elasticsearch."backend-name".protocol]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".protocol]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.protocol[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.protocol]`


[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `https` 
|`http`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username[quarkus.hibernate-search-orm.elasticsearch.username]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username[quarkus.hibernate-search-orm.elasticsearch."backend-name".username]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".username]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.username[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.username]`


[.description]
--
The username used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password[quarkus.hibernate-search-orm.elasticsearch.password]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password[quarkus.hibernate-search-orm.elasticsearch."backend-name".password]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".password]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.password[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.password]`


[.description]
--
The password used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout[quarkus.hibernate-search-orm.elasticsearch.connection-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout[quarkus.hibernate-search-orm.elasticsearch."backend-name".connection-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".connection-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.connection-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.connection-timeout]`


[.description]
--
The timeout when establishing a connection to an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout[quarkus.hibernate-search-orm.elasticsearch.read-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout[quarkus.hibernate-search-orm.elasticsearch."backend-name".read-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".read-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.read-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.read-timeout]`


[.description]
--
The timeout when reading responses from an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout[quarkus.hibernate-search-orm.elasticsearch.request-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout[quarkus.hibernate-search-orm.elasticsearch."backend-name".request-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".request-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.request-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.request-timeout]`


[.description]
--
The timeout when executing a request to an Elasticsearch server.

This includes the time needed to wait for a connection to be available,
send the request and read the response.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_REQUEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_REQUEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections[quarkus.hibernate-search-orm.elasticsearch.max-connections]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections[quarkus.hibernate-search-orm.elasticsearch."backend-name".max-connections]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".max-connections]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections]`


[.description]
--
The maximum number of connections to all the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm.elasticsearch."backend-name".max-connections-per-route]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".max-connections-per-route]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections-per-route]`


[.description]
--
The maximum number of connections per Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm.elasticsearch.discovery.enabled]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm.elasticsearch."backend-name".discovery.enabled]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".discovery.enabled]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.enabled]`


[.description]
--
Defines if automatic discovery is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm.elasticsearch."backend-name".discovery.refresh-interval]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".discovery.refresh-interval]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.refresh-interval]`


[.description]
--
Refresh interval of the node list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm.elasticsearch.thread-pool.size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm.elasticsearch."backend-name".thread-pool.size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".thread-pool.size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.thread-pool.size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.thread-pool.size]`


[.description]
--
The size of the thread pool assigned to the backend.

Note that number is **per backend**, not per index.
Adding more indexes will not add more threads.

As all operations happening in this thread-pool are non-blocking,
raising its size above the number of processor cores available to the JVM will not bring noticeable performance
benefit.
The only reason to alter this setting would be to reduce the number of threads;
for example, in an application with a single index with a single indexing queue,
running on a machine with 64 processor cores,
you might want to bring down the number of threads.

Defaults to the number of processor cores available to the JVM on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_THREAD_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_THREAD_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore[quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore[quarkus.hibernate-search-orm.elasticsearch."backend-name".query.shard-failure.ignore]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".query.shard-failure.ignore]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.query.shard-failure.ignore]`


[.description]
--
Whether partial shard failures are ignored (`true`) or lead to Hibernate Search throwing an exception (`false`).

Will default to `false` in Hibernate Search 7.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_QUERY_SHARD_FAILURE_IGNORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_QUERY_SHARD_FAILURE_IGNORE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm.elasticsearch.version-check.enabled]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm.elasticsearch."backend-name".version-check.enabled]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".version-check.enabled]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version-check.enabled]`


[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup.

Set to `false` if the Elasticsearch cluster may not be available on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION_CHECK_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION_CHECK_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status]`


[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status-wait-timeout]`


[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-count]`


[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-size]`


[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.max-bulk-size]`


[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


h|[[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes-per-index-configuration-overrides]]link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes-per-index-configuration-overrides[Per-index configuration overrides]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.settings-file]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.settings-file[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.settings-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.settings-file]`


[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.mapping-file]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.mapping-file[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.mapping-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.mapping-file]`


[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.analysis.configurer]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.analysis.configurer[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.analysis.configurer[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.analysis.configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.analysis.configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".analysis.configurer]`


[.description]
--
One or more xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean references]
to the component(s) used to configure full text analysis (e.g. analyzers, normalizers).

The referenced beans must implement `ElasticsearchAnalysisConfigurer`.

See xref:hibernate-search-orm-elasticsearch.adoc#analysis-configurer[Setting up the analyzers] for more
information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementations with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status]`


[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`


[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-count]`


[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-size]`


[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-hibernate-search-elasticsearch-runtime-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.max-bulk-size]`


[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
